8157904: Atomic::cmpxchg for jbyte is missing a fence on initial failure

Reviewed-by: simonis, aph, kbarrett